--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,4 +38,16 @@
     <error-code>404</error-code>
     <location>/404.html</location>
   </error-page>
+
+
+  <!-- <filter>
+    <file-name>Filter</name>
+    <filter-class>by.htp.ex.controller.filter.Filter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>Filter</filter-name>
+    <url-pattern>
+      /controller
+    <url-pattern>
+  </filter-mapping> -->
 </web-app>
