--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,12 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-
+        <!-- google json -->
+         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
