--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,22 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- spring security -->
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-framework-bom</artifactId>
+			<version>6.0.3</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
