--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver = com.mysql.cj.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/vibestretch
+db.url = jdbc:mysql://node64945-env-3049108.mycloud.by:3306/vibestretch
 db.user = root
-db.password = root
+db.password = XDIyti02657
 db.poolsize = 5
